--- a/configure.in
+++ b/configure.in
@@ -191,19 +191,6 @@ AM_CONDITIONAL(OTP, test "$otp" = yes)dnl
 
 AC_CHECK_OSFC2
 
-new_des3_code=no
-AC_ARG_ENABLE(new-des3-code,
-[  --enable-new-des3-code to make new key-deriving des3 the default],
-[
-if test "$enableval" = "yes"; then
-	new_des3_code=yes
-fi
-])
-if test "$new_des3_code" = "yes"; then
-	AC_DEFINE(NEW_DES3_CODE, 1, 
-		[Define if you want to enable new triple-DES code])
-fi
-
 AC_CHECK_MAN
 
 AC_TEST_PACKAGE_NEW(readline,
@@ -701,6 +688,8 @@ AC_KRB_IPV6
 AC_HAVE_TYPE([sa_family_t],[#include <sys/socket.h>])
 
 AC_HAVE_TYPE([struct sockaddr_storage], [#include <sys/socket.h>])
+
+AC_HAVE_TYPE([struct addrinfo], [#include <netdb.h>])
 
 dnl
 dnl Check for struct winsize
