(kadmin_SOURCES): add random_password.c
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6852 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/kadmin/Makefile.am
+++ b/kadmin/Makefile.am
@@ -10,7 +10,8 @@ libexec_PROGRAMS = kadmind
 
 kadmin_SOURCES = 						\
 	ank.c cpw.c del.c dump.c ext.c get.c init.c kadmin.c	\
-	load.c mod.c rename.c util.c kadmin_locl.h
+	load.c mod.c rename.c util.c random_password.c		\
+	kadmin_locl.h
 
 if KRB4
 KRB4LIB = $(LIB_krb4)
