configure.in: Added -lgen fix for getspnam in UnixWare. libsmb/clientgen.c: Correctly convert between UNIX and DOS codepage for files/users/passwords/shares. libsmb/pwd_cache.c: Correctly convert between UNIX and DOS codepage for files/users/passwords/shares. nmbd/nmbd_packets.c: Remove code to change incoming subnet. This is now done correctly in nmbd/nmbd_incomingdgrams.c nmbd/nmbd_incomingdgrams.c: Add "Search subnet" as well as incoming subnet. smbd/nttrans.c: Fix for stat file open on read only filesystem. Jeremy.

--- a/source/configure.in
+++ b/source/configure.in
@@ -435,6 +435,9 @@ AC_LIBTESTFUNC(sec, putprpwnam)
 AC_LIBTESTFUNC(security, set_auth_parameters)
 AC_LIBTESTFUNC(sec, set_auth_parameters)
 
+# UnixWare 7.x has its getspnam in -lgen
+AC_LIBTESTFUNC(gen, getspnam)
+
 AC_LIBTESTFUNC(security, getspnam)
 AC_LIBTESTFUNC(sec, getspnam)
 
