link with res_search/dn_expand libraries
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6886 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/auth/pam/Makefile.in
+++ b/lib/auth/pam/Makefile.in
@@ -29,7 +29,8 @@ SHLIBEXT = @REAL_SHLIBEXT@
 LD_FLAGS = @REAL_LD_FLAGS@
  
 @lib_deps_yes@LIB_DEPS = -L../../kafs -L../../krb -L../../des -L../../roken \
-@lib_deps_yes@	   -lkafs -lkrb -ldes -lroken -lc
+@lib_deps_yes@	   -lkafs -lkrb -ldes -lroken \
+@lib_deps_yes@     $(LIB_res_search) $(LIB_dn_expand) -lc
 @lib_deps_no@LIB_DEPS =
 
 LIB = pam_krb4.$(SHLIBEXT)
