--- a/lib/auth/pam/Makefile.in
+++ b/lib/auth/pam/Makefile.in
@@ -27,6 +27,9 @@ PICFLAGS = @REAL_PICFLAGS@
 LDSHARED = @LDSHARED@
 SHLIBEXT = @REAL_SHLIBEXT@
 LD_FLAGS = @REAL_LD_FLAGS@
+
+LIB_res_search = @LIB_res_search@
+LIB_dn_expand = @LIB_dn_expand@
  
 @lib_deps_yes@LIB_DEPS = -L../../kafs -L../../krb -L../../des -L../../roken \
 @lib_deps_yes@	   -lkafs -lkrb -ldes -lroken \
