--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -25,9 +25,9 @@ BASEDIR= @prefix@
 BINDIR = @bindir@
 # we don't use sbindir because we want full compatibility with
 # the previous releases of Samba
-SBINDIR = @bindir@
+SBINDIR = @sbindir@
 LIBDIR = @libdir@
-VARDIR = @localstatedir@
+VARDIR = /var/log/samba
 MANDIR = @mandir@
 
 # The permissions to give the executables
@@ -441,7 +441,7 @@ bin/smbsh: $(SMBSH_OBJ) bin/.dummy
 	@echo Linking $@
 	@$(CC) $(FLAGS) -o $@ $(SMBSH_OBJ) $(LDFLAGS) $(LIBS)
 
-install: installbin installman installscripts installcp installswat
+install: installbin installman installscripts installcp installswat installcatalogs
 
 installdirs:
 	$(SHELL) $(srcdir)/install-sh -d -m $(INSTALLPERMS) \
@@ -462,6 +462,10 @@ installcp: installdirs
 
 installswat: installdirs
 	@$(SHELL) $(srcdir)/script/installswat.sh $(SWATDIR) $(srcdir)
+
+installcatalogs: installdirs
+	@cd web/po
+	@make install PREFIX=$(BASEDIR)
 
 # revert to the previously installed version
 revert:
