(S_SOURCES): add password_quality.c
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6910 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/kadm5/Makefile.am
+++ b/lib/kadm5/Makefile.am
@@ -75,7 +75,8 @@ S_SOURCES =		\
 	randkey_s.c	\
 	rename_s.c	\
 	set_keys.c	\
-	set_modifier.c
+	set_modifier.c	\
+	password_quality.c
 
 libkadm5srv_la_SOURCES = $(S_SOURCES) server_glue.c
 libkadm5clnt_la_SOURCES = $(C_SOURCES) client_glue.c
