(libkrb5_la_SOURCES): add keytab_file.c, keytab_memory.c
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6922 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/krb5/Makefile.am
+++ b/lib/krb5/Makefile.am
@@ -58,6 +58,8 @@ libkrb5_la_SOURCES = \
 	init_creds_pw.c \
 	keyblock.c \
 	keytab.c \
+	keytab_file.c \
+	keytab_memory.c \
 	krbhst.c \
 	kuserok.c \
 	log.c \
