--- a/configure.in
+++ b/configure.in
@@ -51,9 +51,7 @@ dnl AC_KRB_PROG_YACC
 AC_PROG_YACC
 AM_PROG_LEX
 AC_PROG_RANLIB
-dnl AC_PROG_AWK
-dnl mawk seems to mishandle \# in lib/roken/roken.awk
-AC_CHECK_PROGS(AWK, gawk nawk awk, )
+AC_PROG_AWK
 AC_KRB_PROG_LN_S
 
 AC_MIPS_ABI
