(libkrb5_la_SOURCES): add keytab_keyfile.c
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6936 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/krb5/Makefile.am
+++ b/lib/krb5/Makefile.am
@@ -69,6 +69,7 @@ libkrb5_la_SOURCES = \
 	keytab_file.c \
 	keytab_memory.c \
 	$(keytab_krb4_c) \
+	keytab_keyfile.c \
 	krbhst.c \
 	kuserok.c \
 	log.c \
