rename strc{py,at}_truncate -> strlc{py,at}
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6977 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/Makefile.am
+++ b/lib/roken/Makefile.am
@@ -45,8 +45,6 @@ libroken_la_SOURCES =		\
 	simple_exec.c		\
 	snprintf.c		\
 	socket.c		\
-	strcat_truncate.c	\
-	strcpy_truncate.c	\
 	tm2time.c		\
 	verify.c		\
 	warnerr.c		\
@@ -98,6 +96,8 @@ EXTRA_libroken_la_SOURCES =	\
 	strdup.c		\
 	strerror.c		\
 	strftime.c		\
+	strlcat.c		\
+	strlcpy.c		\
 	strlwr.c		\
 	strncasecmp.c		\
 	strndup.c		\
