test for strlcpy, strlcat
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6978 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/configure.in
+++ b/configure.in
@@ -500,7 +500,8 @@ AC_BROKEN(getopt getusershell)
 AC_BROKEN(inet_aton inet_ntop inet_pton initgroups innetgr iruserok lstat)
 AC_BROKEN(memmove)
 AC_BROKEN(mkstemp putenv rcmd readv recvmsg sendmsg setegid setenv seteuid)
-AC_BROKEN(strcasecmp strncasecmp strdup strerror strftime strlwr)
+AC_BROKEN(strcasecmp strncasecmp strdup strerror strftime)
+AC_BROKEN(strlcat strlcpy strlwr)
 AC_BROKEN(strndup strnlen strsep strtok_r strupr)
 AC_BROKEN(swab unsetenv verr verrx vsyslog)
 AC_BROKEN(vwarn vwarnx warn warnx writev)
