large strc{py,at}_truncate -> strlc{py,at} replacement
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6984 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/com_err/Makefile.in
+++ b/lib/com_err/Makefile.in
@@ -141,10 +141,10 @@ lex.c: $(srcdir)/lex.l
 snprintf.c:
 	$(LN_S) $(srcdir)/../roken/snprintf.c .
 
-strcat_truncate.c:
-	$(LN_S) $(srcdir)/../roken/strcat_truncate.c .
+strlcat.c:
+	$(LN_S) $(srcdir)/../roken/strlcat.c .
 
-strcpy_truncate.c:
-	$(LN_S) $(srcdir)/../roken/strcpy_truncate.c .
+strlcpy.c:
+	$(LN_S) $(srcdir)/../roken/strlcpy.c .
 
 .PHONY: all Wall install uninstall clean mostlyclean distclean realclean
