--- a/appl/test/Makefile.am
+++ b/appl/test/Makefile.am
@@ -3,7 +3,7 @@
 include $(top_srcdir)/Makefile.am.common
 
 noinst_PROGRAMS = tcp_client tcp_server gssapi_server gssapi_client \
-	uu_server uu_client
+	uu_server uu_client nt_gss_server nt_gss_client
 
 tcp_client_SOURCES = tcp_client.c common.c test_locl.h
 
@@ -21,7 +21,15 @@ uu_client_SOURCES = uu_client.c common.c test_locl.h
 
 gssapi_server_LDADD = $(top_builddir)/lib/gssapi/libgssapi.la $(LDADD)
 
-gssapi_client_LDADD = $(top_builddir)/lib/gssapi/libgssapi.la $(LDADD)
+gssapi_client_LDADD = $(gssapi_server_LDADD)
+
+nt_gss_client_SOURCES = nt_gss_client.c nt_gss_common.c common.c
+
+nt_gss_server_SOURCES = nt_gss_server.c nt_gss_common.c
+
+nt_gss_client_LDADD = $(gssapi_server_LDADD)
+
+nt_gss_server_LDADD = $(nt_gss_client_LDADD)
 
 LDADD = $(top_builddir)/lib/krb5/libkrb5.la \
 	$(top_builddir)/lib/des/libdes.la \
