--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -149,6 +149,7 @@ RPC_PARSE_OBJ = rpc_parse/parse_lsa.o rpc_parse/parse_misc.o \
 RPC_CLIENT_OBJ = \
 		rpc_client/cli_login.o    \
 		rpc_client/cli_netlogon.o \
+		rpc_client/cli_netlogon_sync.o \
 		rpc_client/cli_reg.o \
 		rpc_client/cli_pipe.o     \
 		rpc_client/cli_lsarpc.o   \
