new uid handling code. After looking at the problem with AIX 4.1 I decided that the way we handled uid/euid is not good. I've now rewritten it to test properly for the 4 supported uid handling varients and I've added assert calls to ensure that the uid/euid are always set to hat we expect. This might possibly break some platforms (although I hope not) but I think that is better than the previous situation where we could silently do the wrong thing.
the disadvantage is that the full tsts are only possible when you run
configure as root. Otherise configure needs to make an educated guess.

the core of the new code is in lib/util_sec.c. Look there if you want
to know what is going on with this change.

--- a/source/include/config.h.in
+++ b/source/include/config.h.in
@@ -174,6 +174,10 @@
 #undef USE_BOTH_CRYPT_CALLS
 #undef HAVE_BROKEN_FCNTL64_LOCKS
 #undef HAVE_FNMATCH
+#undef USE_SETEUID
+#undef USE_SETRESUID
+#undef USE_SETREUID
+#undef USE_SETUIDX
 
 /* The number of bytes in a int.  */
 #undef SIZEOF_INT
@@ -574,14 +578,8 @@
 /* Define if you have the set_auth_parameters function.  */
 #undef HAVE_SET_AUTH_PARAMETERS
 
-/* Define if you have the setegid function.  */
-#undef HAVE_SETEGID
-
 /* Define if you have the setenv function.  */
 #undef HAVE_SETENV
-
-/* Define if you have the seteuid function.  */
-#undef HAVE_SETEUID
 
 /* Define if you have the setgidx function.  */
 #undef HAVE_SETGIDX
@@ -597,12 +595,6 @@
 
 /* Define if you have the setpriv function.  */
 #undef HAVE_SETPRIV
-
-/* Define if you have the setregid function.  */
-#undef HAVE_SETREGID
-
-/* Define if you have the setreuid function.  */
-#undef HAVE_SETREUID
 
 /* Define if you have the setsid function.  */
 #undef HAVE_SETSID
