add a check for GETGRENT

--- a/source/include/config.h.in
+++ b/source/include/config.h.in
@@ -482,6 +482,9 @@
 /* Define if you have the getdents function.  */
 #undef HAVE_GETDENTS
 
+/* Define if you have the getgrent function.  */
+#undef HAVE_GETGRENT
+
 /* Define if you have the getgrnam function.  */
 #undef HAVE_GETGRNAM
 
