--- a/kadmin/Makefile.am
+++ b/kadmin/Makefile.am
@@ -34,7 +34,7 @@ COMMON_LDADD = \
 
 kadmind_LDADD = $(KRB4LIB) $(top_builddir)/lib/kadm5/libkadm5srv.la \
 	$(COMMON_LDADD)
-	$(LIB_dlopen) \
+	$(LIB_dlopen)
 
 kadmin_LDADD = \
 	$(top_builddir)/lib/kadm5/libkadm5clnt.la \
