(CLEANFILES): add generated files so that they get cleaned away
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7124 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/kx/Makefile.am
+++ b/appl/kx/Makefile.am
@@ -10,6 +10,8 @@ X_PROGS_BIN_PROGS     = kx
 X_PROGS_BIN_SCRPTS    = rxterm rxtelnet tenletxr
 X_PROGS_LIBEXEC_PROGS = kxd
 
+CLEANFILES = rxterm rxtelnet tenletxr
+
 MAKE_X_PROGS_BIN_PROGS     = @MAKE_X_PROGS_BIN_PROGS@
 MAKE_X_PROGS_BIN_SCRPTS    = @MAKE_X_PROGS_BIN_SCRPTS@
 MAKE_X_PROGS_LIBEXEC_PROGS = @MAKE_X_PROGS_LIBEXEC_PROGS@
