--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -150,7 +150,8 @@ SMBD_OBJ1 = smbd/server.o smbd/files.o smbd/chgpasswd.o smbd/connection.o \
 	    smbd/dosmode.o smbd/filename.o smbd/open.o smbd/close.o smbd/blocking.o \
 	    smbd/process.o smbd/oplock.o smbd/service.o smbd/error.o
 
-PRINTING_OBJ = printing/pcap.o printing/print_svid.o printing/printing.o
+PRINTING_OBJ = printing/pcap.o printing/print_svid.o printing/printing.o \
+		printing/print_cups.o
 
 SMBD_OBJ = $(SMBD_OBJ1) $(PARAM_OBJ) $(LIBSMB_OBJ) $(UBIQX_OBJ) \
            $(RPC_SERVER_OBJ) $(RPC_CLIENT_OBJ) $(RPC_PARSE_OBJ) \
