--- a/appl/Makefile.am
+++ b/appl/Makefile.am
@@ -5,5 +5,18 @@ include $(top_srcdir)/Makefile.am.common
 if OTP
 dir_otp = otp
 endif
-SUBDIRS = afsutil ftp login $(dir_otp) popper push rsh su telnet test kx kf
-# kauth
+SUBDIRS = 					\
+	  afsutil				\
+	  ftp					\
+	  login					\
+	  $(dir_otp)				\
+	  popper				\
+	  push					\
+	  rsh					\
+	  su					\
+	  xnlock				\
+	  telnet				\
+	  test					\
+	  kx					\
+	  kf					\
+	  # kauth
