(kadmin_LDADD): add LIB_dlopen
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7164 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/kadmin/Makefile.am
+++ b/kadmin/Makefile.am
@@ -33,10 +33,11 @@ COMMON_LDADD = \
 	$(DBLIB)
 
 kadmind_LDADD = $(KRB4LIB) $(top_builddir)/lib/kadm5/libkadm5srv.la \
-	$(COMMON_LDADD)
+	$(COMMON_LDADD) \
 	$(LIB_dlopen)
 
 kadmin_LDADD = \
 	$(top_builddir)/lib/kadm5/libkadm5clnt.la \
 	$(top_builddir)/lib/kadm5/libkadm5srv.la \
-	$(COMMON_LDADD)
+	$(COMMON_LDADD) \
+	$(LIB_dlopen)
