--- a/configure.in
+++ b/configure.in
@@ -547,10 +547,10 @@ inet_aton)
 AC_FIND_FUNC_NO_LIBS(crypt, crypt)dnl
 
 dnl
-dnl libroken references crypt
+dnl libroken references crypt and dbopen
 dnl
 
-LIB_roken='$(top_builddir)/lib/roken/libroken.la $(LIB_crypt)'
+LIB_roken='$(top_builddir)/lib/roken/libroken.la $(LIB_crypt) $(LIB_dbopen)'
 AC_SUBST(LIB_roken)dnl
 
 AC_CACHE_CHECK(if realloc if broken, ac_cv_func_realloc_broken, [
