--- a/appl/su/Makefile.am
+++ b/appl/su/Makefile.am
@@ -13,5 +13,4 @@ LDADD = $(LIB_kafs) \
 	$(LIB_krb4) \
 	$(top_builddir)/lib/des/libdes.la \
 	$(top_builddir)/lib/asn1/libasn1.la \
-	$(top_builddir)/lib/roken/libroken.la
-
+	$(LIB_roken)
