--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -121,7 +121,7 @@ PARAM_OBJ = param/loadparm.o param/params.o
 LIBSMB_OBJ = libsmb/clientgen.o libsmb/namequery.o libsmb/nmblib.o \
              libsmb/nterr.o libsmb/smbdes.o libsmb/smbencrypt.o \
              libsmb/smberr.o libsmb/credentials.o libsmb/pwd_cache.o \
-	     libsmb/passchange.o libsmb/clienttrust.o
+	     libsmb/passchange.o 
 
 RPC_SERVER_OBJ = \
 		rpc_server/srv_lsa.o \
@@ -162,8 +162,8 @@ RPC_CLIENT_OBJ = \
 		rpc_client/cli_svcctl.o \
 		rpc_client/cli_samr.o   \
 		rpc_client/cli_atsvc.o \
-		rpc_client/cli_eventlog.o
-
+		rpc_client/cli_eventlog.o \
+		libsmb/clienttrust.o
 
 LOCKING_OBJ = locking/locking.o locking/locking_shm.o locking/locking_slow.o \
               locking/shmem.o locking/shmem_sysv.o
