SunOS 5.6 requires that pam modules are linked with -lpam.
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7224 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/auth/pam/Makefile.in
+++ b/lib/auth/pam/Makefile.in
@@ -33,7 +33,7 @@ LIB_dn_expand = @LIB_dn_expand@
  
 @lib_deps_yes@LIB_DEPS = -L../../kafs -L../../krb -L../../des \
 @lib_deps_yes@	   -lkafs -lkrb -ldes \
-@lib_deps_yes@     $(LIB_res_search) $(LIB_dn_expand) -lc
+@lib_deps_yes@     $(LIB_res_search) $(LIB_dn_expand) -lpam -lc
 @lib_deps_no@LIB_DEPS =
 
 LIB = pam_krb4.$(SHLIBEXT)
