fix dependency on parse.h
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7259 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/asn1/Makefile.am
+++ b/lib/asn1/Makefile.am
@@ -93,7 +93,7 @@ CLEANFILES = lex.c parse.c parse.h asn1.h $(BUILT_SOURCES) \
 
 include_HEADERS = asn1.h asn1_err.h der.h
 
-lex.lo: parse.h
+$(asn1_compile_OBJECTS): parse.h
 
 $(gen_files) asn1.h: asn1_files
 
