use `unsigned char' instead of `u_int8_t' to avoid having to have that definition.  this is the easy way out instead of getting the definition here where it's needed.  flame me.
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7266 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/roken.h.in
+++ b/lib/roken/roken.h.in
@@ -441,7 +441,7 @@ typedef unsigned short sa_family_t;
 #if HAVE_STRUCT_SOCKADDR_SA_LEN
 
 struct sockaddr_storage {
-    u_int8_t		__ss_len;
+    unsigned char	__ss_len;
     sa_family_t		__ss_family;
     char		pad[
 #ifdef HAVE_IPV6
@@ -449,7 +449,7 @@ struct sockaddr_storage {
 #else
 			    sizeof(struct sockaddr_in)
 #endif
-			   - sizeof(u_int8_t) - sizeof(sa_family_t)];
+			   - sizeof(unsigned char) - sizeof(sa_family_t)];
 };
 
 #else
