test for pthread.h
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7269 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/configure.in
+++ b/configure.in
@@ -285,6 +285,7 @@ AC_CHECK_HEADERS([\
 	netinet6/in6.h				\
 	netinfo/ni.h				\
 	paths.h					\
+	pthread.h				\
 	pty.h					\
 	pwd.h					\
 	resolv.h				\
