(install-build-headers): use `cp' instead of INSTALL_DATA for copying header files inside the build tree.  The user might have redefined INSTALL_DATA to specify owners and other information.
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7291 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/cf/Makefile.am.common
+++ b/cf/Makefile.am.common
@@ -68,8 +68,8 @@ install-build-headers:: $(include_HEADERS) $(build_HEADERZ)
 		else file="$$f"; fi; \
 		if cmp -s  $$file $(buildinclude)/$$f 2> /dev/null ; then \
 		: ; else \
-			echo " $(INSTALL_DATA) $$file $(buildinclude)/$$f"; \
-			$(INSTALL_DATA) $$file $(buildinclude)/$$f; \
+			echo " cp $$file $(buildinclude)/$$f"; \
+			cp $$file $(buildinclude)/$$f; \
 		fi ; \
 	done
 
