spell copyhostent correctly
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7315 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/Makefile.am
+++ b/lib/roken/Makefile.am
@@ -52,7 +52,7 @@ libroken_la_SOURCES =		\
 
 EXTRA_libroken_la_SOURCES =	\
 	chown.c			\
-	copyhosten.c		\
+	copyhostent.c		\
 	daemon.c		\
 	err.c			\
 	err.h			\
