(install-build-headers): use `cp' instead of INSTALL_DATA
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7318 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/kadm5/Makefile.am
+++ b/lib/kadm5/Makefile.am
@@ -22,8 +22,8 @@ install-build-headers::
 		else file="$$f"; fi; \
 		if cmp -s  $$file $(buildkadm5include)/$$f 2> /dev/null ; then \
 		: ; else \
-			echo "$(INSTALL_DATA) $$file $(buildkadm5include)/$$f";\
-			$(INSTALL_DATA) $$file $(buildkadm5include)/$$f; \
+			echo "cp $$file $(buildkadm5include)/$$f";\
+			cp $$file $(buildkadm5include)/$$f; \
 		fi ; \
 	done
 
