--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -158,6 +158,7 @@ RPC_CLIENT_OBJ = \
 		rpc_client/cli_pipe.o     \
 		rpc_client/cli_lsarpc.o   \
 		rpc_client/cli_wkssvc.o   \
+		rpc_client/cli_spoolss.o   \
 		rpc_client/cli_srvsvc.o   \
 		rpc_client/cli_svcctl.o \
 		rpc_client/cli_samr.o   \
@@ -249,6 +250,7 @@ SMBPASSWD_OBJ = utils/smbpasswd.o $(PARAM_OBJ) $(LIBSMB_OBJ) \
 RPCCLIENT_OBJ = rpcclient/rpcclient.o \
              rpcclient/display.o \
              rpcclient/cmd_lsarpc.o \
+             rpcclient/cmd_spoolss.o \
              rpcclient/cmd_wkssvc.o \
              rpcclient/cmd_samr.o \
              rpcclient/cmd_reg.o \
