--- a/source/configure.in
+++ b/source/configure.in
@@ -1116,7 +1116,7 @@ AC_ARG_WITH(dfs,
 AC_MSG_CHECKING(whether to use Kerberos IV)
 AC_ARG_WITH(krb4,
 [  --with-krb4=base-dir     Include Kerberos IV support
-  --whithout-krb4          Don't include Kerbers IV support (default)],
+  --without-krb4          Don't include Kerbers IV support (default)],
 [   AC_MSG_RESULT(yes)
     AC_DEFINE(KRB4_AUTH)
     AC_CHECK_LIB(resolv, dn_expand)
@@ -1131,7 +1131,7 @@ AC_ARG_WITH(krb4,
 AC_MSG_CHECKING(whether to use Kerberos 5)
 AC_ARG_WITH(krb5,
 [  --with-krb5=base-dir     Include Kerberos 5 support
-  --whithout-krb5          Don't include Kerbers 5 support (default)],
+  --without-krb5          Don't include Kerbers 5 support (default)],
 [   AC_MSG_RESULT(yes)
     AC_DEFINE(KRB5_AUTH)
     LIBS="$LIBS -ldes425 -lkrb5 -lcrypto -lcom_err"
