set LIBNAME.  From Enrico Scholz <Enrico.Scholz@informatik.tu-chemnitz.de>
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7398 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/auth/afskauthlib/Makefile.in
+++ b/lib/auth/afskauthlib/Makefile.in
@@ -36,7 +36,8 @@ LDSHARED = @LDSHARED@
 SHLIBEXT = @REAL_SHLIBEXT@
 LD_FLAGS = @REAL_LD_FLAGS@
  
-LIB = afskauthlib.$(SHLIBEXT)
+LIBNAME = afskauthlib
+LIB = $(LIBNAME).$(SHLIBEXT)
 
 SOURCES = verify.c
 
