--- a/lib/auth/pam/Makefile.in
+++ b/lib/auth/pam/Makefile.in
@@ -36,7 +36,8 @@ LIB_dn_expand = @LIB_dn_expand@
 @lib_deps_yes@     $(LIB_res_search) $(LIB_dn_expand) -lpam -lc
 @lib_deps_no@LIB_DEPS =
 
-LIB = pam_krb4.$(SHLIBEXT)
+LIBNAME = pam_krb4
+LIB = $(LIBNAME).$(SHLIBEXT)
 
 SOURCES = pam.c
 
