--- a/lib/auth/sia/Makefile.in
+++ b/lib/auth/sia/Makefile.in
@@ -39,7 +39,8 @@ LD_FLAGS = @REAL_LD_FLAGS@
 @lib_deps_yes@	   -lc
 @lib_deps_no@LIB_DEPS =
 
-LIB = libsia_krb4.$(SHLIBEXT)
+LIBNAME = libsia_krb4
+LIB = $(LIBNAME).$(SHLIBEXT)
 
 SOURCES = sia.c posix_getpw.c
 
