--- a/appl/xnlock/Makefile.am
+++ b/appl/xnlock/Makefile.am
@@ -6,10 +6,14 @@ INCLUDES += $(INCLUDE_krb4) $(X_CFLAGS)
 
 WFLAGS += $(WFLAGS_NOIMPLICITINT)
 
-bin_PROGRAMS = xnlock
-xnlock_SOURCES = xnlock.c
+X_PROGS_BIN_PROGS = xnlock
 
+MAKE_X_PROGS_BIN_PROGS     = @MAKE_X_PROGS_BIN_PROGS@
+
+bin_PROGRAMS   = $(MAKE_X_PROGS_BIN_PROGS)
 man1_MANS = xnlock.man
+
+EXTRA_PROGRAMS         = $(X_PROGS_BIN_PROGS)
 
 EXTRA_DIST = $(man1_MANS) nose.0.left nose.0.right nose.1.left nose.1.right \
 	nose.down nose.front nose.left.front nose.right.front
