--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -144,7 +144,8 @@ RPC_PARSE_OBJ1 = rpc_parse/parse_lsa.o \
                 rpc_parse/parse_samr.o rpc_parse/parse_srv.o \
                 rpc_parse/parse_wks.o rpc_parse/parse_sec.o \
                 rpc_parse/parse_svc.o rpc_parse/parse_at.o \
-		rpc_parse/parse_spoolss.o rpc_parse/parse_eventlog.o
+		rpc_parse/parse_spoolss.o rpc_parse/parse_eventlog.o \
+		rpc_parse/parse_brs.o
 
 RPC_PARSE_OBJ2 = rpc_parse/parse_rpc.o rpc_parse/parse_prs.o \
 		rpc_parse/parse_misc.o 
@@ -160,6 +161,7 @@ RPC_CLIENT_OBJ = \
 		rpc_client/cli_spoolss.o   \
 		rpc_client/cli_lsarpc.o   \
 		rpc_client/cli_wkssvc.o   \
+		rpc_client/cli_brs.o   \
 		rpc_client/cli_srvsvc.o   \
 		rpc_client/cli_svcctl.o \
 		rpc_client/cli_samr.o   \
@@ -252,6 +254,7 @@ RPCCLIENT_OBJ = rpcclient/rpcclient.o \
 		rpcclient/display.o \
 		rpcclient/cmd_lsarpc.o \
 		rpcclient/cmd_wkssvc.o \
+		rpcclient/cmd_brs.o \
 		rpcclient/cmd_samr.o \
 		rpcclient/cmd_reg.o \
 		rpcclient/cmd_srvsvc.o \
