- bug in nmbd registering DOMAIN_NAME<1c> to WINS server; recursion   desired flag MUST be set in any NBT UDP packets sent to a WINS   server, else they will go to the WINS client side of the NT NetBIOS   kernel instead, and will get trashed.
- added \PIPE\browser server-side code.

--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -136,6 +136,7 @@ RPC_SERVER_OBJ = \
 		rpc_server/srv_pipe.o \
 		rpc_server/srv_lookup.o \
 		rpc_server/srv_wkssvc.o \
+		rpc_server/srv_brs.o \
 		rpc_server/srv_spoolss.o
 
 RPC_PARSE_OBJ1 = rpc_parse/parse_lsa.o \
