--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -167,6 +167,7 @@ RPC_CLIENT_OBJ = \
 		rpc_client/cli_svcctl.o \
 		rpc_client/cli_samr.o   \
 		rpc_client/msrpc_samr.o   \
+		rpc_client/msrpc_lsarpc.o   \
 		rpc_client/cli_atsvc.o \
 		rpc_client/cli_eventlog.o \
 		libsmb/clienttrust.o
