--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -159,6 +159,7 @@ RPC_CLIENT_OBJ = \
 		rpc_client/cli_netlogon_sync.o \
 		rpc_client/cli_reg.o \
 		rpc_client/cli_pipe.o     \
+		rpc_client/cli_connect.o     \
 		rpc_client/cli_spoolss.o   \
 		rpc_client/cli_lsarpc.o   \
 		rpc_client/cli_wkssvc.o   \
