--- a/kadmin/Makefile.am
+++ b/kadmin/Makefile.am
@@ -8,11 +8,23 @@ sbin_PROGRAMS = kadmin
 
 libexec_PROGRAMS = kadmind
 
-kadmin_SOURCES = 						\
-	ank.c cpw.c del.c dump.c ext.c get.c init.c kadmin.c	\
-	load.c mod.c rename.c util.c random_password.c		\
+kadmin_SOURCES =				\
+	ank.c					\
+	cpw.c					\
+	del.c					\
+	del_enctype.c				\
+	dump.c					\
+	ext.c					\
+	get.c					\
+	init.c					\
+	kadmin.c				\
+	load.c					\
+	mod.c					\
+	rename.c				\
+	util.c					\
+	random_password.c			\
 	kadmin_locl.h
-
+	
 if KRB4
 KRB4LIB = $(LIB_krb4)
 version4_c = version4.c
